# monitoramento_operadores

./: .gitignore  README.md  contexto_completo.md  gerar_contexto.py  main.py  pyproject.toml
data/raw/legacy/: 2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
notebooks/: plot_projecao.py
src/: aggregate.py  extract.py  legacy.py  pipeline.py  transform.py  utils.py
