[project]
name = "monitoramento-operadores"
version = "0.2.0"
description = "Monitoramento de Operadores TRIIP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "polars>=1.39.3",
    "prefect>=3.6.26",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
]
